# glassfrog-cli

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/glassfrog_cli/: client.py  config.py  formatters.py  main.py  models.py
src/glassfrog_cli/commands/: assignments.py  circles.py  meetings.py  people.py  projects.py  roles.py
tests/: conftest.py  test_client.py  test_config.py  test_models.py
tests/fixtures/: assignments.json  circles.json  people.json  projects.json  roles.json
tests/test_commands/: test_circles.py  test_meetings.py  test_people.py  test_projects.py  test_roles.py
