[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "glassfrog-cli"
version = "0.2.2"
description = "CLI tool for read-only access to the GlassFrog API"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "rich>=13.0",
    "pydantic>=2.0",
    "tomli>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "respx>=0.20",
    "ruff>=0.1",
]

[project.scripts]
gf = "glassfrog_cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
